@@ -24,7 +24,9 @@
 
  Changes between 1.0.0a and 1.0.0b  [xx XXX xxxx]
 
-  *)
+  *) Fix WIN32 build system to correctly link an ENGINE directory into
+     a DLL. 
+     [Steve Henson]
 
  Changes between 1.0.0 and 1.0.0a  [01 Jun 2010]
 
